editors/tree-sitter-sema/test/corpus/literals.txt
================================================================================
Integer
================================================================================

42

--------------------------------------------------------------------------------

(source_file (number))

================================================================================
Negative integer
================================================================================

-7

--------------------------------------------------------------------------------

(source_file (number))

================================================================================
Float
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file (number))

================================================================================
Negative float
================================================================================

-2.5

--------------------------------------------------------------------------------

(source_file (number))

================================================================================
String
================================================================================

"hello"

--------------------------------------------------------------------------------

(source_file (string))

================================================================================
String with escape sequence
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(source_file (string (escape_sequence)))

================================================================================
Boolean #t
================================================================================

#t

--------------------------------------------------------------------------------

(source_file (boolean))

================================================================================
Boolean #f
================================================================================

#f

--------------------------------------------------------------------------------

(source_file (boolean))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file (boolean))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file (boolean))

================================================================================
Character literal
================================================================================

#\a

--------------------------------------------------------------------------------

(source_file (character))

================================================================================
Named character space
================================================================================

#\space

--------------------------------------------------------------------------------

(source_file (character))

================================================================================
Named character newline
================================================================================

#\newline

--------------------------------------------------------------------------------

(source_file (character))

================================================================================
Nil
================================================================================

nil

--------------------------------------------------------------------------------

(source_file (symbol))

================================================================================
Keyword
================================================================================

:name

--------------------------------------------------------------------------------

(source_file (keyword))

================================================================================
Keyword with slash
================================================================================

:model/name

--------------------------------------------------------------------------------

(source_file (keyword))
